New structure for presentations (#1)
* feat: use marp to create presentations

--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
+  "name": "presentations",
   "private": true,
   "scripts": {
-    "build": "slidev build",
-    "dev": "slidev --open",
-    "export": "slidev export"
+    "start": "yarn build -s",
+    "build": "marp -I ./slides -o ./dist"
   },
   "dependencies": {
-    "@slidev/cli": "^0.27.15",
-    "@slidev/theme-default": "*",
-    "@slidev/theme-seriph": "*"
-  },
-  "name": "i-heart-me"
+    "@marp-team/marp-cli": "^4.0.3"
+  }
 }
