--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -38,5 +38,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
-        artifact_name: ${{ env.ARTIFACT_NAME }}
         uses: actions/deploy-pages@v4
+        with:
+          artifact_name: ${{ env.ARTIFACT_NAME }}
