--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,6 +17,9 @@ jobs:
         run: |
           npm install
           npm run build
+      
+      - name: Copy images
+        run: cp -r images dist/images
 
       - name: Upload
         uses: actions/upload-pages-artifact@v3
